# baidu-netdisk-skill

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENT_PLAN.md  LICENSE  LIMITATIONS.md  README.md  SKILL.md  pyproject.toml  requirements-dev.txt
examples/: setup-and-test.ps1  setup-and-test.sh  setup-env.ps1  setup-env.sh  sync-folder.sh  upload-and-share.sh
references/: api-cheatsheet.md  auth-setup.md
scripts/: baidu_pcs.py
tests/: __init__.py  conftest.py  test_baidu_pcs.py
