[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "baidu-netdisk-skill"
version = "1.3.0"
description = "百度网盘命令行工具 + AI Agent Skill — 一行命令生成永久分享链接"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.7"
authors = [
    {name = "baidu-netdisk-skill contributors"},
]
keywords = ["baidu", "netdisk", "pan", "cli", "share-link", "ai-agent", "skill"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dotenv = ["python-dotenv>=0.19.0"]
dev = [
    "python-dotenv>=0.19.0",
    "pytest>=6.0.0",
    "pytest-mock>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/zhen1018124-ui/baidu-netdisk-skill"

[tool.setuptools]
# 把 scripts/ 目录映射成 baidu_pcs 包
# scripts/baidu_pcs.py → baidu_pcs.py 模块
# 这样 `import baidu_pcs` 和 `pip install -e .` 都能工作
packages = ["baidu_pcs"]

[tool.setuptools.package-dir]
baidu_pcs = "scripts"
